crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__delete_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/delete.py
---
## Input

```py
x = 1
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = 1
b, c, d = (2, 3, 4)

# Some comment
del x  # Trailing comment
# Dangling comment

# Some comment
del x, aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, b, c, d  # Trailing comment
# Dangling comment

# Some comment
del (
    x,
    # Slapping one here
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
    b,
    c,
    d
    # Another one
) # Trailing comment
# Dangling comment
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -7,13 +7,7 @@
 # Dangling comment
 
 # Some comment
-del (
-    x,
-    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
-    b,
-    c,
-    d,
-)  # Trailing comment
+del x, aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, b, c, d  # Trailing comment
 # Dangling comment
 
 # Some comment
@@ -23,7 +17,7 @@
     aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
     b,
     c,
-    d
+    d,
     # Another one
 )  # Trailing comment
 # Dangling comment
```

## Ruff Output

```py
x = 1
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = 1
b, c, d = (2, 3, 4)

# Some comment
del x  # Trailing comment
# Dangling comment

# Some comment
del (
    x,
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
    b,
    c,
    d,
)  # Trailing comment
# Dangling comment

# Some comment
del (
    x,
    # Slapping one here
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
    b,
    c,
    d
    # Another one
)  # Trailing comment
# Dangling comment
```

## Black Output

```py
x = 1
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = 1
b, c, d = (2, 3, 4)

# Some comment
del x  # Trailing comment
# Dangling comment

# Some comment
del (
    x,
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
    b,
    c,
    d,
)  # Trailing comment
# Dangling comment

# Some comment
del (
    x,
    # Slapping one here
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
    b,
    c,
    d
    # Another one
)  # Trailing comment
# Dangling comment
```


