crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__docstring_preview_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/docstring_preview.py
---
## Input

```py
def docstring_almost_at_line_limit():
    """long docstring.................................................................
    """


def docstring_almost_at_line_limit_with_prefix():
    f"""long docstring................................................................
    """


def mulitline_docstring_almost_at_line_limit():
    """long docstring.................................................................

    ..................................................................................
    """


def mulitline_docstring_almost_at_line_limit_with_prefix():
    f"""long docstring................................................................

    ..................................................................................
    """


def docstring_at_line_limit():
    """long docstring................................................................"""


def docstring_at_line_limit_with_prefix():
    f"""long docstring..............................................................."""


def multiline_docstring_at_line_limit():
    """first line-----------------------------------------------------------------------

    second line----------------------------------------------------------------------"""


def multiline_docstring_at_line_limit_with_prefix():
    f"""first line----------------------------------------------------------------------

    second line----------------------------------------------------------------------"""


def single_quote_docstring_over_line_limit():
    "We do not want to put the closing quote on a new line as that is invalid (see GH-3141)."


def single_quote_docstring_over_line_limit2():
    'We do not want to put the closing quote on a new line as that is invalid (see GH-3141).'
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,9 +1,13 @@
 def docstring_almost_at_line_limit():
-    """long docstring................................................................."""
+    """long docstring.................................................................
+    """
 
 
 def docstring_almost_at_line_limit_with_prefix():
-    f"""long docstring................................................................"""
+    (
+        f"""long docstring................................................................
+    """
+    )
 
 
 def mulitline_docstring_almost_at_line_limit():
@@ -14,10 +18,12 @@
 
 
 def mulitline_docstring_almost_at_line_limit_with_prefix():
-    f"""long docstring................................................................
+    (
+        f"""long docstring................................................................
 
     ..................................................................................
     """
+    )
 
 
 def docstring_at_line_limit():
@@ -35,9 +41,11 @@
 
 
 def multiline_docstring_at_line_limit_with_prefix():
-    f"""first line----------------------------------------------------------------------
+    (
+        f"""first line----------------------------------------------------------------------
 
     second line----------------------------------------------------------------------"""
+    )
 
 
 def single_quote_docstring_over_line_limit():
```

## Ruff Output

```py
def docstring_almost_at_line_limit():
    """long docstring.................................................................
    """


def docstring_almost_at_line_limit_with_prefix():
    (
        f"""long docstring................................................................
    """
    )


def mulitline_docstring_almost_at_line_limit():
    """long docstring.................................................................

    ..................................................................................
    """


def mulitline_docstring_almost_at_line_limit_with_prefix():
    (
        f"""long docstring................................................................

    ..................................................................................
    """
    )


def docstring_at_line_limit():
    """long docstring................................................................"""


def docstring_at_line_limit_with_prefix():
    f"""long docstring..............................................................."""


def multiline_docstring_at_line_limit():
    """first line-----------------------------------------------------------------------

    second line----------------------------------------------------------------------"""


def multiline_docstring_at_line_limit_with_prefix():
    (
        f"""first line----------------------------------------------------------------------

    second line----------------------------------------------------------------------"""
    )


def single_quote_docstring_over_line_limit():
    "We do not want to put the closing quote on a new line as that is invalid (see GH-3141)."


def single_quote_docstring_over_line_limit2():
    "We do not want to put the closing quote on a new line as that is invalid (see GH-3141)."
```

## Black Output

```py
def docstring_almost_at_line_limit():
    """long docstring................................................................."""


def docstring_almost_at_line_limit_with_prefix():
    f"""long docstring................................................................"""


def mulitline_docstring_almost_at_line_limit():
    """long docstring.................................................................

    ..................................................................................
    """


def mulitline_docstring_almost_at_line_limit_with_prefix():
    f"""long docstring................................................................

    ..................................................................................
    """


def docstring_at_line_limit():
    """long docstring................................................................"""


def docstring_at_line_limit_with_prefix():
    f"""long docstring..............................................................."""


def multiline_docstring_at_line_limit():
    """first line-----------------------------------------------------------------------

    second line----------------------------------------------------------------------"""


def multiline_docstring_at_line_limit_with_prefix():
    f"""first line----------------------------------------------------------------------

    second line----------------------------------------------------------------------"""


def single_quote_docstring_over_line_limit():
    "We do not want to put the closing quote on a new line as that is invalid (see GH-3141)."


def single_quote_docstring_over_line_limit2():
    "We do not want to put the closing quote on a new line as that is invalid (see GH-3141)."
```


