crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__fmtonoff4_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/fmtonoff4.py
---
## Input


```py
# fmt: off
@test([
    1, 2,
    3, 4,
])
# fmt: on
def f(): pass

@test([
    1, 2,
    3, 4,
])
def f(): pass

```


## Black Differences


```diff
--- Black
+++ Ruff
@@ -1,10 +1,14 @@
 # fmt: off
-@test([
-    1, 2,
-    3, 4,
-])
-# fmt: on
+@test(
+    [
+        1,
+        2,
+        3,
+        4,
+    ]
+)
 def f():
+    # fmt: on
     pass
 
 
@@ -18,4 +22,3 @@
 )
 def f():
     pass
-

```


## Ruff Output


```py
# fmt: off
@test(
    [
        1,
        2,
        3,
        4,
    ]
)
def f():
    # fmt: on
    pass


@test(
    [
        1,
        2,
        3,
        4,
    ]
)
def f():
    pass

```


## Black Output


```py
# fmt: off
@test([
    1, 2,
    3, 4,
])
# fmt: on
def f():
    pass


@test(
    [
        1,
        2,
        3,
        4,
    ]
)
def f():
    pass


```



