crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__fmtskip2_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/fmtskip2.py
---
## Input

```py
l1 = ["This list should be broken up", "into multiple lines", "because it is way too long"]
l2 = ["But this list shouldn't", "even though it also has", "way too many characters in it"]  # fmt: skip
l3 = ["I have", "trailing comma", "so I should be braked",]

```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -3,7 +3,11 @@
     "into multiple lines",
     "because it is way too long",
 ]
-l2 = ["But this list shouldn't", "even though it also has", "way too many characters in it"]  # fmt: skip
+l2 = [
+    "But this list shouldn't",
+    "even though it also has",
+    "way too many characters in it",
+]  # fmt: skip
 l3 = [
     "I have",
     "trailing comma",

```

## Ruff Output

```py
l1 = [
    "This list should be broken up",
    "into multiple lines",
    "because it is way too long",
]
l2 = [
    "But this list shouldn't",
    "even though it also has",
    "way too many characters in it",
]  # fmt: skip
l3 = [
    "I have",
    "trailing comma",
    "so I should be braked",
]
```

## Black Output

```py
l1 = [
    "This list should be broken up",
    "into multiple lines",
    "because it is way too long",
]
l2 = ["But this list shouldn't", "even though it also has", "way too many characters in it"]  # fmt: skip
l3 = [
    "I have",
    "trailing comma",
    "so I should be braked",
]
```


