crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__fmtskip4_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/fmtskip4.py
---
## Input


```py
a =   2
# fmt: skip
l = [1, 2, 3,]

```


## Black Differences


```diff
--- Black
+++ Ruff
@@ -4,5 +4,4 @@
     1,
     2,
     3,
-]
-
+]
\ No newline at end of file

```


## Ruff Output


```py
a = 2
# fmt: skip
l = [
    1,
    2,
    3,
]
```


## Black Output


```py
a = 2
# fmt: skip
l = [
    1,
    2,
    3,
]


```



