crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__fmtskip5_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/fmtskip5.py
---
## Input

```py
a, b, c = 3, 4,       5
if (
    a ==    3
    and b    != 9  # fmt: skip
    and c is not None
):
    print("I'm good!")
else:
    print("I'm bad")

```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,9 +1,5 @@
 a, b, c = 3, 4, 5
-if (
-    a == 3
-    and b    != 9  # fmt: skip
-    and c is not None
-):
+if a == 3 and b != 9 and c is not None:  # fmt: skip
     print("I'm good!")
 else:
-    print("I'm bad")
\ No newline at end of file
+    print("I'm bad")

```

## Ruff Output

```py
a, b, c = 3, 4, 5
if a == 3 and b != 9 and c is not None:  # fmt: skip
    print("I'm good!")
else:
    print("I'm bad")

```

## Black Output

```py
a, b, c = 3, 4, 5
if (
    a == 3
    and b    != 9  # fmt: skip
    and c is not None
):
    print("I'm good!")
else:
    print("I'm bad")
```


