crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__fmtskip6_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/fmtskip6.py
---
## Input


```py
class A:
    def f(self):
        for line in range(10):
            if True:
                pass  # fmt: skip

```


## Black Differences


```diff
--- Black
+++ Ruff
@@ -2,5 +2,4 @@
     def f(self):
         for line in range(10):
             if True:
-                pass  # fmt: skip
-
+                pass

```


## Ruff Output


```py
class A:
    def f(self):
        for line in range(10):
            if True:
                pass

```


## Black Output


```py
class A:
    def f(self):
        for line in range(10):
            if True:
                pass  # fmt: skip


```



