crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__fmtskip_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/fmtskip.py
---
## Input


```py
a, b = 1, 2
c =    6  # fmt: skip
d = 5

```


## Black Differences


```diff
--- Black
+++ Ruff
@@ -1,4 +1,3 @@
 a, b = 1, 2
-c =    6  # fmt: skip
-d = 5
-
+c = 6  # fmt: skip
+d = 5
\ No newline at end of file

```


## Ruff Output


```py
a, b = 1, 2
c = 6  # fmt: skip
d = 5
```


## Black Output


```py
a, b = 1, 2
c =    6  # fmt: skip
d = 5


```



